<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Betsquared</string>
    <string name="app_description">Social Betting Android Application</string>
    <string name="foursquarebase">Foursquare Base</string>
    <string name="foursquareoauth">Start Foursquare Oauth</string>
    <string name="cancel_button">Cancel</string>
    <string name="testfoursquareuserdetails">Test FourSquare getUserDetails</string>
    <string name="testbetsquareuserdetails">Test BetSquare getUserDetails</string>
    <string name="testnearbyvenues">Test getNearByVenues</string>
    <string name="testgetpublicgames">Test getPublicGames</string>
    <string name="testviewvenueactivity">Test View Venue</string>
    <string name="emailaddress">Email Address</string>
    <string name="novenues">No Venues</string>
    <string name="twitterid">Twitter ID</string>
    <string name="twitteroauth">Twitter OAuth</string>
    <string name="facebookid">Facebook ID</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="nogames">No Games</string>
    <string name="gobutton">Go</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="testgetuserdashboard">Test User Dashboard</string>
    <string name="username">User Name</string>
    <string name="userpassword">Password</string>
    <string name="loginbuttontext">Sign-In</string>
    <string name="logoutbuttontext">Logout</string>
    <string name="registerbuttontext">Join Betsquared</string>
    <string name="testgetbetsquareduserdetails">Test Get Betsquared User Details</string>
    <string name="testbetsquarapprovedecline">Test Approve/Decline</string>
    <string name="avatarurl">Avatar Url</string>
    <string name="visitingteam">Visiting Team</string>
    <string name="hometeam">Home Team</string>
    <string name="betbutton">Bet</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="invitefoursquarefriends">Invite Foursquare Friends to BetSquared</string>
    <string name="invitetwitterfriends">Invite Twitter Friends to BetSquared</string>
    <string name="friendsbutton">Friends</string>
    <string name="mebutton">Me</string>
    <string name="betsbutton">Bets</string>
    <string name="placesbutton">Places</string>
    <string name="testbutton">Test</string>
    <string name="wagerunits">Wager Amount</string>
    <string name="wagertype">Wager Type</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="foursquare">Foursquare</string>
    <string name="signin_up_text">You can sign-in with your foursquare, facebook, twitter or other account.</string>
    <string name="betsquaredtos">Yes, I Accept Betsquared\'s test <a href="jittr.com"> Terms of Service</a></string>
    <string name="findfriends">Find Friends</string>
    <string name="ducketts">Ducketts</string>
    <string name="paymentchoices">Payment Choices</string>
    <!--  Menu Strings -->
    <string name="confirmregistration">Welcome to Betsquared</string>
    <string name="aboutbetsquaredmenu">About Betsquared</string>
    <string name="bankstatementmenu">Bank Statement</string>
    <string name="preferencesmenu">Preferences</string>
    <!--  End Menu Strings -->
    <!--  Purchase Strings -->
    <string name="purchasefailure">Purchase Failure!</string>
    <string name="purchasefailure2">We\'re sorry, but your payment failed.</string>
    <string name="purchasecanceled">Purchase Canceled!</string>
    <string name="purchasecanceled2">Your payment has been canceled.</string>
    <string name="purchasecanceled3">Your account was not charged.</string>
    <string name="purchasesucceeded">Purchase Succeeded</string>
    <string name="tryagain">Try Again!</string>
    <!--  Added for Facebook Example integration -->
    <string name="request">Request!</string>
    <string name="hello">Hello World!</string>
    <string name="upload">Upload Photo</string><string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="nofriends">No Friends</string>
    <string name="invitebetsquaredfriends">Find and Invite Betsquared Users</string>
    <string name="revieworder">Review Order</string>
    <string name="gameinvitesapprovedecline">Bet Invites Approve/Decline</string>
    <string name="friendinvitesapprovedecline">Friend Invites Approve/Decline</string>
    <string name="userbets">My Current Bets</string>
    <!-- End Added for Facebook Example integration -->

 </resources>
