<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    theme="@style/gameon_background_color"
 >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/foursquarebase"
    />
<Button 
    android:text="@string/foursquareoauth"
    android:id="@+id/foursquareoauth" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
    android:text="@string/twitteroauth"
    android:id="@+id/twitterOAuthButton" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
    android:text="@string/testfoursquareuserdetails"
    android:id="@+id/getuserdetails_button" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
    android:text="@string/testbetsquareuserdetails"
    android:id="@+id/getbetsuserdetails_button" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
    android:text="@string/testnearbyvenues"
    android:id="@+id/getnearbyvenues_button" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
    android:text="@string/testgetpublicgames"
    android:id="@+id/getpublicgames_button" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
    android:text="@string/testgetuserdashboard"
    android:id="@+id/getuserdashboard_button" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
</Button>
<Button 
     android:text="@string/logoutbuttontext" 
     android:id="@+id/logout_button" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </Button>
<Button 
     android:text="@string/cancel_button" 
     android:id="@+id/cancel_button" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </Button>
 <include android:id="@+id/cell1" layout="@layout/bottombar" />
</LinearLayout>
