<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
 

<Button 
    android:text="@string/cancel_button" 
    android:id="@+id/cancelButton"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
 </Button>
 <EditText
    android:text="@string/emailaddress" 
    android:id="@+id/emailEditText" 
    android:layout_width="wrap_content"  
    android:layout_weight="1"
    android:maxLines="1"
    android:maxLength="25"
    android:inputType="textEmailAddress"
    android:layout_height="wrap_content"
    android:layout_below="@id/cancel_button">
 </EditText>
 <EditText
    style="@style/StandardEditText"
    android:text="@string/firstname" 
    android:id="@+id/firstNameEditText" 
    android:layout_below="@id/emailEditText">
 </EditText>
<EditText 
     android:text="@string/lastname" 
     android:id="@+id/lastNameEdiTtext"
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:layout_below="@id/emailEditText">
</EditText>
<EditText 
     android:text="@string/twitterid" 
     android:id="@+id/twitterEditText"
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:layout_below="@+d/lastNameEditText"
 >
</EditText>
<EditText 
     android:text="@string/facebookid" 
     android:id="@+id/faceBookEditText"
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:layout_below="@+d/twitterEditText">
 </EditText>
<TextView 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:text="@string/avatarurl" 
     android:id="@+id/foursquareAvatarUrlTextView"
 >
 </TextView>
<ImageView 
     android:id="@+id/foursquareAvatarUrlImageView"
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:text="@string/avatarurl"
 >
 </ImageView>  
 <include android:id="@+id/cell1" layout="@layout/bottombar" />
 </LinearLayout>
