<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<EditText 
    android:layout_marginTop="10dip"
    android:singleLine="true"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:id="@+id/userNameEditText" 
    android:hint="@string/username"
    android:imeOptions="actionNext">   
</EditText>
<EditText 
    android:singleLine="true"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:hint="@string/userpassword"
    android:id="@+id/passwordEditText" 
    android:inputType="textPassword"
    android:imeOptions="actionNext">
</EditText>
 <EditText 
    android:singleLine="true"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:id="@+id/firstNameEditText" 
    android:hint="@string/firstname"
    android:imeOptions="actionNext">
</EditText>
 <EditText 
    android:singleLine="true"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:id="@+id/lastNameEditText" 
    android:hint="@string/lastname"
    android:imeOptions="actionNext">
></EditText>
<EditText 
    android:singleLine="true"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:id="@+id/emailEditText" 
    android:hint="@string/emailaddress"
    android:inputType="textEmailAddress"
    android:imeOptions="actionDone">
</EditText>
 <include android:id="@+id/socialNetworkLayout" layout="@layout/social_network_checkbox" />
 <Button 
    android:layout_width="match_parent" 
    android:layout_height="40dip"
    android:textSize="15px"
    android:textStyle="bold"    android:text="@string/registerbuttontext" 
    android:id="@+id/registerButton"
    android:enabled="false">
 </Button>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/textEditComboLayout" >
  <Button 
    style="@style/CancelButton"
    android:text="@string/cancel_button" 
    android:id="@+id/cancelButton" >    
 </Button>
 </LinearLayout>
 </LinearLayout>
