<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<TextView 
    android:text="@string/username"
    android:id="@+id/TextView01" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
 </TextView>
<EditText 
    android:id="@+id/userNameEditText" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
 </EditText>
 </LinearLayout>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
 <TextView 
    android:text="@string/userpassword"
    android:id="@+id/TextView01" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
 </TextView>
<EditText 
    style="@style/StandardPasswordEditText"
    android:id="@+id/userPasswordEditText" 
 >
 </EditText>
</LinearLayout>
 <Button 
    android:text="@string/loginbuttontext" 
    android:id="@+id/loginButton" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
 </Button>
 <Button 
    style="@style/StandardButton"
    android:text="@string/registerbuttontext" 
    android:id="@+id/registerButton"
 >    
 </Button>
 <Button
    style="@style/CancelButton" 
    android:text="@string/cancel_button" 
    android:id="@+id/cancelButton" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content">
 </Button>
 </LinearLayout>
