<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="horizontal"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<CheckBox 
     android:text="@string/facebook" 
     android:id="@+id/facebookCheckBox"
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </CheckBox>
 <CheckBox 
     android:text="@string/twitter" 
     android:id="@+id/twitterCheckBox" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </CheckBox>
<CheckBox 
     android:text="@string/foursquare" 
     android:id="@+id/foursquareCheckBox" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </CheckBox>
</LinearLayout>
