<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
 <TextView 
     style="@style/StandardTextView"
     android:layout_below="@+id/cancelButton"
     android:id="@+id/eventNameTextView" >
</TextView>
<TextView 
     style="@style/StandardTextView"
     android:layout_below="@+id/eventNameTextView"
      android:id="@+id/eventDateTimeTextView" >
</TextView>
<RadioGroup 
     android:orientation="horizontal"
     android:id="@+id/teamsRadioGroup" 
     android:layout_below="@+id/eventDateTimeTextView"
     android:imeOptions="actionNext"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
<RadioButton 
     android:text="@+id/visitingteam" 
     android:id="@+id/visitingTeamRadioButton" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </RadioButton>
<RadioButton 
     android:text="@+id/hometeam" 
     android:id="@+id/homeTeamRadioButton" 
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content">
 </RadioButton>
 </RadioGroup>
<LinearLayout
     android:paddingLeft= "5dip"
     android:layout_marginLeft="5dip"
     android:background="@drawable/rectangle_background"
     android:id="@+id/wagerTypeLayout"
     android:orientation="horizontal"
     android:layout_below="@+id/teamsRadioGroup"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
<TextView 
     style="@style/StandardTextView"
     android:text="@string/wagertype">
</TextView>
<EditText
     android:text="@string/ducketts"
     android:hint="@string/ducketts"
     android:imeOptions="actionNext"
     style="@style/StandardEditText"
     android:id="@+id/wagerTypeEditText">
</EditText>
</LinearLayout>
<LinearLayout
     android:paddingLeft= "5dip"
     android:layout_marginLeft="5dip"
     android:id="@+id/wagerUnitsLayout"
     android:background="@drawable/rectangle_background"
     android:layout_below="@+id/wagerTypeLayout"
     android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
<TextView 
     style="@style/StandardTextView"
     android:text="@string/wagerunits">
</TextView>
<EditText
     style="@style/StandardEditText"
     android:imeOptions="actionDone"
     android:layout_centerHorizontal="true"
     android:id="@+id/wagerUnitsEditText">
</EditText>
</LinearLayout>
<Button 
    android:layout_marginTop="10dip"
    android:layout_below="@+id/wagerUnitsLayout"
    android:layout_width="match_parent" 
    android:layout_height="40dip"
    android:textSize="15px"
    android:textStyle="bold"
    android:text="@string/betbutton" 
    android:id="@+id/betButton" >
</Button>
<ListView
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_below="@+id/betButton"
        android:layout_above="@+id/bottomBarLayout"
 		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:scrollbars="vertical"
		android:id="@id/android:list"
		android:text="@string/nogames">
</ListView>	
<include android:id="@+id/bottomBarLayout" layout="@layout/bottombar" />
</RelativeLayout>
