<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_gravity="center_vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
<TextView 
      android:text="@+id/TextView01" 
      android:id="@+id/TextView01" 
      android:layout_width="match_parent" 
      android:layout_height="wrap_content">
</TextView>
<TextView 
      android:gravity="center"
      android:textStyle="bold"
      android:textSize="20dip"
      android:layout_gravity="center"
      android:id="@+id/confirmRegistrationTextView" 
      android:text="@string/confirmregistration"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content">
</TextView>
 <ImageView
       android:id="@+id/avatarImageView"
       android:src="@drawable/betsquaredicon_100x100"
       android:layout_width="match_parent" android:layout_height="wrap_content">
 </ImageView>
<Button
       android:layout_gravity="center"
       android:text="@string/update" 
       android:id="@+id/updateButton" 
	   android:layout_marginTop="10dip"
	   android:textStyle="bold" 
	   android:layout_width="120dip" 
	   android:layout_height="40dip"
	   android:background="@drawable/button_bg">
 </Button>
 <Button 
       android:layout_gravity="center"
	   android:layout_marginTop="10dip"
	   android:textStyle="bold" 
	   android:layout_width="120dip" 
	   android:layout_height="40dip"
	   android:background="@drawable/button_bg"
	   android:text="@string/findfriends" 
       android:id="@+id/findFriendsButton" 
></Button>
<include android:id="@+id/findFriendSocialNetworkLayout" layout="@layout/social_network_checkbox" />

</LinearLayout>
